Fixed contrast for links

--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@
     --card-border-radius: 10px;
     --small-border-radius: 4px;
     --paragraph: #adadad;
+
+    --link: #7184ff;
 }
 
 body {
@@ -115,6 +117,23 @@ ul, ol {
 
 hr {
     border: none;
+}
+
+a {
+    color: var(--link);
+}
+
+a:hover {
+    color: var(--link);
+}
+
+.css-13qpir0-view-link {
+    color: var(--link) !important;
+    text-decoration: none !important;
+}
+
+.css-13qpir0-view-link:hover {
+    text-decoration: underline !important;
 }
 
 /* Application layout */
